# api

./: .env  .gitignore  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/endpoints/: __init__.py  auth.py  dummy_data.py  notifications.py  reminders.py  transactions.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: notification.py  reminders.py  transactions.py  user.py
app/schemas/: notification.py  reminder.py  transactions.py  user.py
