[project]
name = "my_fastapi_service"
version = "0.1.0"
description = "FastAPI service with SQLAlchemy, Pydantic, and authentication"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "sqlalchemy>=2.0.22",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.9.1",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.6",
    "alembic>=1.12.0",
    "bcrypt>=4.0.1",
    "email-validator>=2.0.0",
    "loguru>=0.7.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.2",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.6.1",
]

[tool.rye.scripts]
start = "uvicorn app.main:app --reload" 
