[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Emad Anwer", email = "emadanwer.official@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.115.12",
    "sqlalchemy>=2.0.40",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "passlib>=1.7.4",
    "python-jose>=3.4.0",
    "alembic>=1.15.2",
    "python-multipart>=0.0.20",
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "loguru>=0.7.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
